
zxid-0.77:: 10.2.2011
    - upgraded for php-5.3 support (patch from Jeroen Asselman)
    - Improved -at handling in zxpasswd
    - curl_easy_reset() patch from Jeroen Asselman (fixes crash on Win32)
    - Applied zxid_saml2_map_nid_fmt() patch by Cal Heldenbrand
    - Robustified error processing in cases where encryption certificate is missing

zxid-0.76:: 26.1.2011
    - Added error checks
    - Fixed ordering of RelatesTo header
    - Fixed leakage of unknown namespaces to decoder
    - Made memory allocators really use function pointers

zxid-0.75:: 24.1.2011
    - MINGW fixes
    - User supplied MessageID duplicate fix
    - Fixed XML encoding of empty namespace prefixes
    - Fixed Brian's ordering problem (risaris-bad.xml)

zxid-0.74:: 22.1.2011
    - Changed 0 to fileno(stdin) in calls to read_all_fd() for better Windows portability
    - Included Axis2ZXIDModule.zip
    - Added Trust PDP call to discovery
    - Added Credentials and Privacy Negotiation capability to discovery

zxid-0.73:: 19.12.2010
    - Added ssoa7n and tgta7n attributes (TAS3 feature req #484)
    - Added optional sessionwide idpsesid attribute (TAS3 feature req #419)
    - Added IDWSF SOAP headers to discovery and as responses
    - Fixed a problem with copy_file(). This could cause lost audit trail when copy instead of deletion was chosen on platform that does not use links.
    - Fixed element ordering in zxcot generated EPRs
    - Added IdP side AAMAP capability to transform attributes, including a7n wrap
    - Each credential as its own a7n
    - Added <ns:foo/> close tag tail optimization to encoder, controlled by c->enc_tail_opt flag
    - Added preliminary DSA support
    - Crude and preliminary X509 attribute cert support
    - Fixed excessive content-length in CGI output
    - Fixed XML valued attributes (TAS3 bug #385)